--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.560.0",
-    "next": "16.0.8",
+    "next": "^15.1.3",
     "nodemailer": "^7.0.11",
     "pdf-parse": "^2.4.5",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -30,7 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8",
+    "eslint-config-next": "^15.1.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
